implement 32bit hook dll.

--- a/VDMHelper32/VDMHelper32.vcxproj.filters
+++ b/VDMHelper32/VDMHelper32.vcxproj.filters
@@ -24,16 +24,27 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VirtualDesktops.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VDMHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="VDMHelper32.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VDMHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="VDMHelper.def">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
