--- a/VDMHelper64/VDMHelper64.vcxproj.filters
+++ b/VDMHelper64/VDMHelper64.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="VirtualDesktops.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VDMHelperAPI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
