fix vcxproject.filter typo

--- a/VDMHelper/VDMHelper32.vcxproj.filters
+++ b/VDMHelper/VDMHelper32.vcxproj.filters
@@ -32,7 +32,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include=src\"stdafx.cpp">
+    <ClCompile Include="src\stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\dllmain.cpp">
